# dns-redirect

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.json  dns-redirect.service  example-config.json  install-daemon.sh
.amazonq/cli-agents/: Q.json
.cargo/: config.toml
src/: main.rs
